Fix issue when background changes painting target layer

BUG=672149
TEST=paint/invalidation/compositing/stop-painting-onto-scrolling-contents.html
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2559863002
Cr-Commit-Position: refs/heads/master@{#437296}

Former-commit-id: 31210a50c0fe3f11dc838209f06f7d84579dc8f0